--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,6 @@
     <version>1.0</version>
 
     <properties>
-
         <!-- Generic properties -->
         <java.version>1.8</java.version>
         <!-- Web -->
@@ -35,8 +34,8 @@
         </dependencies>
     </dependencyManagement>
 
-    <!--bootstrap webjars.org-->
 
+    <!--bootstrap webjars.org-->
     <dependencies>
 
         <!-- Spring MVC -->
@@ -64,6 +63,32 @@
             <artifactId>jsp-api</artifactId>
             <version>${jsp.version}</version>
             <scope>provided</scope>
+        </dependency>
+
+        <!-- Apache Commons File Upload -->
+        <dependency>
+            <groupId>commons-fileupload</groupId>
+            <artifactId>commons-fileupload</artifactId>
+            <version>1.3.1</version>
+        </dependency>
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>2.4</version>
+        </dependency>
+
+        <!-- Excel view -->
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi</artifactId>
+            <version>3.12</version>
+        </dependency>
+
+        <!-- PDF view -->
+        <dependency>
+            <groupId>com.lowagie</groupId>
+            <artifactId>itext</artifactId>
+            <version>2.1.5</version>
         </dependency>
 
     </dependencies>
