--- a/src/main/resources/util.properties
+++ b/src/main/resources/util.properties
@@ -12,9 +12,10 @@ jdbc.hsqldb.url=jdbc:hsqldb:mem://localhost
 jdbc.hsqldb.username=sa
 jdbc.hsqldb.password=
 
-#Java Mail properties
-java.mail.username=info@javastudy.ru
-java.mail.password=<YOUR PASSWORD> 
+
+#Java Mail properties. Put here your really info in gMail.
+java.mail.username=Belstrel@gmail.com
+java.mail.password=mz@java252015sofi
 java.mail.host=smtp.gmail.com
 
 test.param=test parameter property
